--- a/Credit_card__Feature Engineering and Selection.ipynb
+++ b/Credit_card__Feature Engineering and Selection.ipynb
@@ -77,7 +77,7 @@
     "#Lendo os dados\n",
     "\n",
     "    \n",
-    "path = 'C:\\\\Users\\\\Rodrigo\\\\Documents\\\\Curso Data Science Big Data\\\\Projects\\\\Credit Card Default\\\\data.csv'\n",
+    "path = 'data.csv'\n",
     "\n",
     "\n",
     "data = pd.read_csv(path, sep=\";\",header=1)\n",
